project (NPL)

find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
#SET OPENSSL_ROOT_DIR=C:/vcpkg/installed/x64-windows

ADD_EXECUTABLE(Test Test.cpp)

SET_PROPERTY(TARGET Test PROPERTY CXX_STANDARD 17)

TARGET_INCLUDE_DIRECTORIES(Test PRIVATE ${CMAKE_SOURCE_DIR}/INCLUDE)

TARGET_INCLUDE_DIRECTORIES(Test PUBLIC ${CMAKE_SOURCE_DIR})

TARGET_LINK_LIBRARIES(Test ${CMAKE_THREAD_LIBS_INIT} OpenSSL::SSL Ws2_32.lib)