project (NPL)

find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
#SET OPENSSL_ROOT_DIR=C:/vcpkg/installed/x64-windows

ADD_EXECUTABLE(TestNPL Test.cpp)

SET_PROPERTY(TARGET TestNPL PROPERTY CXX_STANDARD 17)

TARGET_INCLUDE_DIRECTORIES(
  TestNPL
  PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/INCLUDE
)

TARGET_LINK_LIBRARIES(TestNPL ${CMAKE_THREAD_LIBS_INIT} OpenSSL::SSL Ws2_32.lib)