cmake_minimum_required(VERSION 3.0)

project (NPL)

# SET OPENSSL_ROOT_DIR=D:/vcpkg/installed/x64-windows

find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)

ADD_EXECUTABLE(TestNPL TestNPL.cpp)
ADD_EXECUTABLE(TestCopy TestCopy.cpp)

if (WIN32)
  SET (CMAKE_CXX_FLAGS_RELEASE "/Zi /Od")
  SET_TARGET_PROPERTIES(
   TestNPL PROPERTIES 
   LINK_FLAGS 
   "/DEBUG /OPT:REF /OPT:ICF"
  )
  SET_TARGET_PROPERTIES(
   TestCopy PROPERTIES 
   LINK_FLAGS 
   "/DEBUG /OPT:REF /OPT:ICF"
  )
endif (WIN32)

SET_PROPERTY(TARGET TestNPL PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET TestCopy PROPERTY CXX_STANDARD 17)

TARGET_INCLUDE_DIRECTORIES(
  TestNPL
  PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/INCLUDE
  ${CMAKE_CURRENT_SOURCE_DIR}/../cpp-osl
  ${CMAKE_CURRENT_SOURCE_DIR}/../cpp-osl/INCLUDE
)
TARGET_INCLUDE_DIRECTORIES(
  TestCopy
  PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/INCLUDE
  ${CMAKE_CURRENT_SOURCE_DIR}/../cpp-osl
  ${CMAKE_CURRENT_SOURCE_DIR}/../cpp-osl/INCLUDE
)

TARGET_LINK_LIBRARIES(TestNPL ${CMAKE_THREAD_LIBS_INIT} OpenSSL::SSL Ws2_32.lib)
TARGET_LINK_LIBRARIES(TestCopy Ws2_32.lib virtdisk.lib)